# Kyzen_assignment

./: .gitignore  PROJECT_REPORT.md  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: cli.py  loop.py  orchestrator.py  prompts.py  schemas.py
backend/app/excel/: builder.py
backend/app/jobs/: store.py
backend/app/llm/: ollama_client.py
backend/app/observability/: logging.py
backend/app/resilience/: circuit_breaker.py  retry.py  timeout.py
backend/app/streaming/: bus.py  events.py
backend/app/tools/: fetch_page.py  financials.py  registry.py  web_search.py
backend/tests/: test_excel.py  test_qa_regressions.py  test_resilience.py  test_schemas.py  test_tools.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EventTimeline.tsx  PhaseStepper.tsx  PortfolioView.tsx  SearchForm.tsx  ToolCallCard.tsx
frontend/src/hooks/: useResearchStream.ts
frontend/src/types/: index.ts
